Aligning the group names correctly in the web search
git-svn-id: https://svn.l3s.uni-hannover.de/learnweb/trunk/LearnwebOER/Learnweb@4013 422a2c9f-66af-4668-9993-60dc3b0871b8

--- a/WebContent/resources/search/search.css
+++ b/WebContent/resources/search/search.css
@@ -192,8 +192,6 @@
 .list_view a.resourceWebLink { color:rgb(88, 147, 236); font-size: 1.6rem; font-family: "Segoe UI",Arial,Helvetica,sans-serif; }
 .list_view a.resourceWebLink:visited { color:rgb(60, 110, 200); }
 
-.list_view .group_left_padding {padding-left:10px;}
-
 .page_counter {
 	font-weight:bold;
 	margin:5px 0 -10px 15px;
